fixed weird padding on mobile on landing page
Former-commit-id: 876678b006e4bba0f04d3f31a69d038d3de0d158

--- a/css/style.css
+++ b/css/style.css
@@ -565,7 +565,11 @@ footer a:hover{
     .landing .btn-large {
         display: none;
     }
+    .landing-content>*:first-child {
+        margin-left: 0px;
+    }
     .landing-content>*:last-child {
+        margin-right: 0px;
         margin-bottom: 50px;
     }
 }
